Modified Search styling, fixed text wrapping

--- a/app/assets/stylesheets/about_us_style.css
+++ b/app/assets/stylesheets/about_us_style.css
@@ -60,6 +60,7 @@ h2 {
     padding: 10px;
     border-radius: 30px;
     width: 100%;
+    white-space: nowrap;
 
 }
 
